# ai-ethics-assistant

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Taskfile.yaml  docker-compose.yml  pyproject.toml
.task/checksum/: python-setup
deployment/terraform/: .gitignore  ec2.tf  iam.tf  main.tf  outputs.tf  security.tf  terraform.tfvars.example  user-data.sh  variables.tf  versions.tf
scripts/: ingest.py
src/ai_ethics_assistant/: configuration.py  dependencies.py  prompts.py  version.py
src/ai_ethics_assistant/cmds/: gradio_app.py  server.py
src/ai_ethics_assistant/pipeline/: embedder.py  ingestion_pipeline.py  pdf_processor.py
src/ai_ethics_assistant/server/: api_v1.py  app.py  internal.py  models.py
src/ai_ethics_assistant/services/: llm_service.py  rag_service.py  s3_service.py  vector_store_service.py
