[project]
name = "ai-ethics-assistant"
version = "0.1.0"
description = "AI Ethics Assistant - A tool for ethical AI development"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "docling>=2.9.0",
    "fastapi>=0.115.7",
    "gradio>=5.0.0",
    "huggingface-hub>=0.26.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "pydantic-settings>=2.7.1",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "pytest-anyio>=0.8.0",
    "ruff>=0.9.2",
    "trio>=0.28.0",
    "typos>=1.29.4",
]

[tool.pyright]
# see https://microsoft.github.io/pyright/#/configuration?id=pyright-configuration
exclude = ["**/node_modules", "**/__pycache__", "**/.venv"]
reportMissingImports = true
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.ruff]
# See https://beta.ruff.rs/docs/configuration/

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
extend-safe-fixes = ["F601"]

[tool.ruff.lint.isort]
combine-as-imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/ai_ethics_assistant"]